<resources>
    <string name="app_name">Bondoman</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="app_tagline">Tracking your cashflow has never been easier</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="scan_qr">Scan QR</string>
    <string name="rp">Rp%1$s</string>
    <string name="capture_twibbon">Capture twibbon</string>
    <string name="add_transaction_title">Title</string>
    <string name="add_transaction_amount">Amount</string>
    <string name="rp_amount">Rp</string>
    <string name="add_transaction_category">Category</string>
    <string name="add_transaction_location">Location</string>
    <string name="save_btn">Save</string>
    <string name="intro_background_content_desc">intro background</string>
    <string name="app_name_capital">BONDOMAN</string>
    <string name="intro_desc">Tracking your cashflow has never been easier</string>
    <string name="start_btn">Start</string>
    <string name="sign_in_to_bondoman">Sign in to Bondoman</string>
    <string name="continue_btn">Continue</string>
    <string name="app_name_normal">Bondoman</string>
    <string name="placeholder_amount">Rp150000</string>
    <string name="placeholder_title">Pizza Hut Delivery - PHD. Dago</string>
    <string name="placeholder_address">Jl. Ir. H. Djuanda No. 342C, Dago Bandung</string>
    <string name="location_icon">location icon</string>
    <string name="transaction_icon">transaction icon</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="time">Time</string>
    <string name="time_placeholder">11:11 AM</string>
    <string name="date">Date</string>
    <string name="date_placeholder">18 Mar 2024</string>
    <string name="category">Category</string>
    <string name="category_placeholder">Expense</string>
    <string name="total">Total</string>
    <string name="amount_placeholder">Rp100.000</string>
    <string name="retake_btn">Retake</string>
    <string name="confirm_btn">Confirm</string>
    <string name="twibbon_overlay">twibbon overlay</string>
    <string name="save_to_gallery_btn">Save to Gallery</string>
    <string name="delete_btn">Delete</string>
    <string name="edit_btn">Edit</string>
    <string name="logo_home">logo home</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="username_placeholder">Guest</string>
    <string name="this_months_income">This month\'s income</string>
    <string name="income_placeholder">Rp1.000.000</string>
    <string name="this_months_expense">This month\'s expense</string>
    <string name="expense_placeholder">Rp100.000</string>
    <string name="expense_icon">expense_icon</string>
    <string name="income_icon">income_icon</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="see_all">See all</string>
    <string name="month_analytics">Jan 2023</string>
    <string name="income">Income</string>
    <string name="all_cash_inflow">All cash inflow</string>
    <string name="income_analytics_placeholder">Rp34.5M</string>
    <string name="trend_placeholder">Same as last month</string>
    <string name="expense">Expense</string>
    <string name="all_cash_outflow">All cash outflow</string>
    <string name="expense_analytics_placeholder">Rp22.73M</string>
    <string name="save_transaction_list">Save transaction list</string>
    <string name="send_transaction_list">Send transaction list</string>
    <string name="randomize_transaction">Randomize transaction</string>
    <string name="create_a_twibbon">Create a twibbon</string>
    <string name="logout">Logout</string>
    <string name="add_transaction">Add transaction</string>
    <string name="location_placeholder">One-Eighty</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="retry_btn">Retry</string>
</resources>