<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_800"
    android:padding="20dp"
    tools:context=".ui.transaction.ViewTransaction">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/roundstyle"
            android:backgroundTint="@color/gray_container"
            android:gravity="center"
            android:layout_marginBottom="24dp"
            android:paddingTop="12dp"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <ImageView
                android:id="@+id/transaction_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_expense_item"
                android:layout_marginBottom="12dp"
                android:contentDescription="@string/transaction_icon" />
            <TextView
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount_placeholder"
                android:fontFamily="@font/urbanist_bold"
                android:textColor="@color/gray_50"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_title"
                android:fontFamily="@font/maisonneueextended_medium"
                android:textColor="@color/gray_300"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:id="@+id/location_gmaps_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="24dp">
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_location"
                    android:layout_marginEnd="4dp"
                    app:tint="@color/green_500"
                    android:contentDescription="@string/location_icon" />
                <TextView
                    android:id="@+id/location_gmaps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_address"
                    android:fontFamily="@font/urbanist_regular"
                    android:textColor="@color/green_500"
                    android:textSize="14sp"
                    android:maxLines="1"
                    android:ellipsize="end"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transaction_details"
                android:fontFamily="@font/urbanist_semibold"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textAlignment="textStart"
                android:layout_marginBottom="16dp"/>

            <LinearLayout
                android:id="@+id/time_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="12dp">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:fontFamily="@font/urbanist_regular"
                    android:textColor="@color/gray_300"
                    android:textSize="14sp"
                    android:textAlignment="textStart"/>
                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_placeholder"
                    android:fontFamily="@font/urbanist_regular"
                    android:textColor="@color/gray_300"
                    android:textSize="14sp"
                    android:textAlignment="viewEnd"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/date_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="12dp">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:fontFamily="@font/urbanist_regular"
                    android:textColor="@color/gray_300"
                    android:textSize="14sp"
                    android:textAlignment="textStart"/>
                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_placeholder"
                    android:fontFamily="@font/urbanist_regular"
                    android:textColor="@color/gray_300"
                    android:textSize="14sp"
                    android:textAlignment="viewEnd"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/category_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:fontFamily="@font/urbanist_regular"
                    android:textColor="@color/gray_300"
                    android:textSize="14sp"
                    android:textAlignment="textStart"/>
                <TextView
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_placeholder"
                    android:fontFamily="@font/urbanist_regular"
                    android:textColor="@color/gray_300"
                    android:textSize="14sp"
                    android:textAlignment="viewEnd"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/total_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:fontFamily="@font/urbanist_bold"
                    android:textColor="@color/gray_100"
                    android:textSize="14sp"
                    android:textAlignment="textStart"/>
                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_placeholder"
                    android:fontFamily="@font/urbanist_bold"
                    android:textColor="@color/gray_100"
                    android:textSize="14sp"
                    android:textAlignment="viewEnd"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/delete_btn"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:fontFamily="@font/urbanist_medium"
                android:textColor="@color/red_500"
                android:background="@drawable/button_danger_outline"
                android:radius="12dp"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/editButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_btn"
                android:backgroundTint="@color/green_700"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:fontFamily="@font/urbanist_medium"
                android:textColor="@color/white"
                app:paddingStart="2dp"
                app:paddingEnd="2dp"
                app:strokeColor="@color/green_900"
                app:strokeWidth="1dp"
                app:cornerRadius="8dp" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>