<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_800"
    android:padding="20dp"
    tools:context=".AddTransaction">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_transaction_title"
                android:fontFamily="@font/urbanist_medium"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>
            <EditText
                android:id="@+id/title"
                style="@style/InputField"
                android:fontFamily="@font/urbanist_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@drawable/roundstyle_xsm"
                android:backgroundTint="@color/gray_container"
                android:padding="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_transaction_amount"
                android:fontFamily="@font/urbanist_medium"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundstyle_xsm"
                android:backgroundTint="@color/gray_container"
                android:padding="10dp">
                <TextView
                    android:id="@+id/prefixCurrency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rp_amount"
                    android:textColor="@color/gray_100"
                    android:fontFamily="@font/urbanist_regular"
                    android:textSize="14sp"
                    android:paddingStart="0dp"
                    android:paddingEnd="8dp"
                    android:layout_centerVertical="true"/>
                <EditText
                    android:id="@+id/amount"
                    style="@style/InputField"
                    android:fontFamily="@font/urbanist_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/prefixCurrency"
                    android:inputType="number"
                    android:background="@color/transparent"
                    android:autofillHints="0" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_transaction_category"
                android:fontFamily="@font/urbanist_medium"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>
            <Spinner
                android:id="@+id/category"
                style="@style/InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundstyle_xsm"
                android:backgroundTint="@color/gray_container"
                android:padding="10dp"
                android:popupBackground="@color/gray_container"
                android:popupTheme="@style/SpinnerPopupStyle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_transaction_location"
                android:fontFamily="@font/urbanist_medium"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>
                <fragment
                    android:id="@+id/autocomplete_fragment_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                    tools:ignore="MissingConstraints,MissingDefaultResource" />
        </LinearLayout>
        <Button
            android:id="@+id/saveButton"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:text="@string/save_btn"
            android:fontFamily="@font/urbanist_medium"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:cornerRadius="8dp"
            app:strokeColor="@color/green_900"
            app:strokeWidth="1dp"
            android:backgroundTint="@color/green_700"
            android:layout_gravity="end"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>